--- a/mobile/alienattack/index.html
+++ b/mobile/alienattack/index.html
@@ -76,7 +76,18 @@
 	<script src="c2runtime.js"></script>
 
     <script>
-		// Size the canvas to fill the browser viewport.
+	    var local = localStorage.getItem("PB_HIGHSCORE");
+	    function onUpdate() {
+		let score = localStorage.getItem("PB_HIGHSCORE");
+		if (score !== local) {
+		    local = score;
+		    console.log(local);
+		};
+		setTimeout(onUpdate, 200);
+	    };
+	    setTimeout(onUpdate, 200);
+		
+	    // Size the canvas to fill the browser viewport.
 		jQuery(window).resize(function() {
 			cr_sizeCanvas(jQuery(window).width(), jQuery(window).height());
 		});
