--- a/mobile/cheeselab/index.html
+++ b/mobile/cheeselab/index.html
@@ -65,6 +65,17 @@
 	<script src="c2runtime.js"></script>
 
     <script>
+	    const key = "RKARMAX_HIGHSCORE";
+	    var local = localStorage.getItem(key);
+	    function onUpdate() {
+		let score = localStorage.getItem(key);
+		if (score !== local) {
+		    local = score;
+		    console.log(local);
+		};
+		setTimeout(onUpdate, 200);
+	    };
+	    setTimeout(onUpdate, 200);
 		// Size the canvas to fill the browser viewport.
 		jQuery(window).resize(function() {
 			cr_sizeCanvas(jQuery(window).width(), jQuery(window).height());
