--- a/mobile/bottomtight/index.html
+++ b/mobile/bottomtight/index.html
@@ -87,7 +87,7 @@
 	<script src="c2runtime.js"></script>
 
     <script>
-	        console.log(localStorage.getItem("SirBottomtight"));
+	        window.onload = () => console.log(localStorage.getItem("SirBottomtight"));
 		// Start the Construct 2 project running on window load.
 		jQuery(document).ready(function ()
 		{			
