--- a/mobile/bottomtight/index.html
+++ b/mobile/bottomtight/index.html
@@ -96,7 +96,7 @@
 		};
 	    var local = '0';
      	    function onUpdate() {
-		let score = getScore(key);
+		let score = getScore();
 		if (score !== local) {
 		    local = score;
 		    console.log(local);
