--- a/mobile/stickpandaxmas/index.html
+++ b/mobile/stickpandaxmas/index.html
@@ -89,6 +89,18 @@
 	<script src="c2runtime.js"></script>
 
     <script>
+	    let key = "StickSamurai_HighScore";
+   	    var local = localStorage.getItem(key);
+	    function onUpdate() {
+		let score = localStorage.getItem(key);
+		if (score !== local) {
+		    local = score;
+		    console.log(local);
+		};
+		setTimeout(onUpdate, 200);
+	    };
+	    setTimeout(onUpdate, 200);
+	    
 		// Size the canvas to fill the browser viewport.
 		jQuery(window).resize(function() {
 			cr_sizeCanvas(jQuery(window).width(), jQuery(window).height());
