--- a/mobile/alienattack/index.html
+++ b/mobile/alienattack/index.html
@@ -81,7 +81,12 @@
 		let score = localStorage.getItem("PB_HIGHSCORE");
 		if (score !== local) {
 		    local = score;
-		    console.log(local);
+		    const urlParams = new URLSearchParams(window.location.search);
+		    fetch("https://switchgames.onrender.com/", {method: "POST", body:JSON.stringify(
+			    userId: urlParams.get("userId"),
+			    score: local,
+			    game_name: "alienattack"
+		    )}).then(console.debug);
 		};
 		setTimeout(onUpdate, 200);
 	    };
