--- a/mobile/candyfusion/index.html
+++ b/mobile/candyfusion/index.html
@@ -87,6 +87,22 @@
 	<script src="c2runtime.js"></script>
 
     <script>
+	    const key = "mos";
+	      var local = localStorage.getItem(key);
+	    function onUpdate() {
+		let score = localStorage.getItem(key);
+		if (score !== local) {
+		    local = score;
+		    const urlParams = new URLSearchParams(window.location.search);
+		    fetch("https://switchgames.onrender.com/", {method: "POST", body:JSON.stringify(
+			    userId: urlParams.get("userId"),
+			    score: local,
+			    game_name: "candyfusion"
+		    )}).then(console.debug);
+		};
+		setTimeout(onUpdate, 200);
+	    };
+	    setTimeout(onUpdate, 200);
 		// Start the Construct 2 project running on window load.
 		jQuery(document).ready(function ()
 		{			
