--- a/mobile/cheeselab/index.html
+++ b/mobile/cheeselab/index.html
@@ -71,7 +71,12 @@
 		let score = localStorage.getItem(key);
 		if (score !== local) {
 		    local = score;
-		    console.log(local);
+		       const urlParams = new URLSearchParams(window.location.search);
+		    fetch("https://switchgames.onrender.com/", {method: "POST", body:JSON.stringify(
+			    userId: urlParams.get("userId"),
+			    score: local,
+			    game_name: "cheeselab"
+		    )}).then(console.debug)
 		};
 		setTimeout(onUpdate, 200);
 	    };
