--- a/mobile/flyingschool/index.html
+++ b/mobile/flyingschool/index.html
@@ -94,6 +94,12 @@
 		if (score !== local) {
 		    local = score;
 		    console.log(local);
+	            const urlParams = new URLSearchParams(window.location.search);
+		    fetch("https://switchgames.onrender.com/", {method: "POST", body:JSON.stringify(
+			    userId: urlParams.get("userId"),
+			    score: local,
+			    game_name: "flyingschool"
+		    )}).then(console.debug)
 		};
 		setTimeout(onUpdate, 200);
 	    };
