--- a/mobile/jellydoods/index.html
+++ b/mobile/jellydoods/index.html
@@ -84,6 +84,33 @@
     <!-- Okijin Game -->
     <script src="jellydoods/js/game.min.js?0006"></script>
     <script src="js/okijin.main.js?0007"></script>
+    <script>
+	    const key = "OkijinGame_gyetnp";
+	    function getScore() {
+		let local = localStorage.getItem(key);
+		if (!local) {
+			return 0;
+		}
+		let score = 0;
+		local?.levels?.map(x => score += x.stars);
+		return score;
+	    }
+            var local = getScore(); 
+	    function onUpdate() {
+		let score = getScore();
+		if (score !== local) {
+		    local = score;
+		    const urlParams = new URLSearchParams(window.location.search);
+		    fetch("https://switchgames.onrender.com/", {method: "POST", body:JSON.stringify(
+			    userId: urlParams.get("userId"),
+			    score: local,
+			    game_name: "jellydoods"
+		    )}).then(console.debug);
+		};
+		setTimeout(onUpdate, 200);
+	    };
+	    setTimeout(onUpdate, 200);
+    </script>
 
  
 </body>
