--- a/mobile/jumpkitty/index.html
+++ b/mobile/jumpkitty/index.html
@@ -100,9 +100,9 @@
 			    game_name: "jumpdragon"
 		    )}).then(console.debug);
 		};
-		setTimeout(onUpdate, 200);
+	//	setTimeout(onUpdate, 200);
 	    };
-	    setTimeout(onUpdate, 200);
+	//    setTimeout(onUpdate, 200);
 		// Size the canvas to fill the browser viewport.
 		jQuery(window).resize(function() {
 			cr_sizeCanvas(jQuery(window).width(), jQuery(window).height());
