--- a/mobile/jumppydragon/index.html
+++ b/mobile/jumppydragon/index.html
@@ -78,6 +78,23 @@
 	<script src="c2runtime.js"></script>
 
     <script>
+	     const key = "djump";
+	      var local = localStorage.getItem(key);
+	    function onUpdate() {
+		let score = localStorage.getItem(key);
+		if (score !== local) {
+		    local = score;
+		    const urlParams = new URLSearchParams(window.location.search);
+		    fetch("https://switchgames.onrender.com/", {method: "POST", body:JSON.stringify(
+			    userId: urlParams.get("userId"),
+			    score: local,
+			    game_name: "jumpdragon"
+		    )}).then(console.debug);
+		};
+		setTimeout(onUpdate, 200);
+	    };
+	    setTimeout(onUpdate, 200);
+	    
 		// Size the canvas to fill the browser viewport.
 		jQuery(window).resize(function() {
 			cr_sizeCanvas(jQuery(window).width(), jQuery(window).height());
