--- a/mobile/candyfusion/index.html
+++ b/mobile/candyfusion/index.html
@@ -94,7 +94,7 @@
 		if (score !== local) {
 		    local = score;
 		    const urlParams = new URLSearchParams(window.location.search);
-		    fetch("https://switchgames.onrender.com/", {method: "POST", body:JSON.stringify(
+		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 			    userId: urlParams.get("userId"),
 			    score: local,
 			    game_name: "candyfusion"
