--- a/mobile/monstereater/index.html
+++ b/mobile/monstereater/index.html
@@ -81,6 +81,26 @@
 	<script src="c2runtime.js"></script>
 
     <script>
+	    fetch("/getScore", {method: "POST", body: JSON.stringify({
+		    userId: urlParams.get("userId"),
+		    game_name: "monstereater"
+	    })}).then(x => x.json().then(data => {
+	         const key = "mos";
+	      var local = data; //localStorage.getItem(key);
+	    function onUpdate() {
+		let score = localStorage.getItem(key);
+		if (score !== local) {
+		    local = score;
+		    const urlParams = new URLSearchParams(window.location.search);
+		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
+			    userId: urlParams.get("userId"),
+			    score: local,
+			    game_name: "monstereater"
+		    )}).then(console.debug);
+		};
+		setTimeout(onUpdate, 200);
+	    };
+	    setTimeout(onUpdate, 200);}));
 		// Size the canvas to fill the browser viewport.
 		jQuery(window).resize(function() {
 			cr_sizeCanvas(jQuery(window).width(), jQuery(window).height());
