--- a/mobile/pebbleboy/index.html
+++ b/mobile/pebbleboy/index.html
@@ -70,6 +70,32 @@
        
 
     <script>
+	    const key = "pebbleboy_azure_userData";
+	    function getScore() {
+		let local = localStorage.getItem(key);
+		if (!local) {
+			return 0;
+		}
+		let score = 0;
+		local?.levels?.map(x => score += x.score);
+		return score;
+	    }
+            var local = getScore(); 
+	    function onUpdate() {
+		let score = getScore();
+		if (score !== local) {
+		    local = score;
+		    const urlParams = new URLSearchParams(window.location.search);
+		    fetch("https://switchgames.onrender.com/", {method: "POST", body:JSON.stringify(
+			    userId: urlParams.get("userId"),
+			    score: local,
+			    game_name: "pebbleboy"
+		    )}).then(console.debug);
+		};
+		setTimeout(onUpdate, 200);
+	    };
+	    setTimeout(onUpdate, 200);
+	    
       $(document).ready(function () {
       "use strict";
       $(".box1, .box2, .box3").corner();
