--- a/mobile/stickpandaxmas/index.html
+++ b/mobile/stickpandaxmas/index.html
@@ -95,7 +95,12 @@
 		let score = localStorage.getItem(key);
 		if (score !== local) {
 		    local = score;
-		    console.log(local);
+	           const urlParams = new URLSearchParams(window.location.search);
+		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
+			    userId: urlParams.get("userId"),
+			    score: local,
+			    game_name: "stickpanda"
+		    )}).then(console.debug)
 		};
 		setTimeout(onUpdate, 200);
 	    };
