--- a/mobile/trailblazer/index.html
+++ b/mobile/trailblazer/index.html
@@ -39,7 +39,12 @@
 		let score = getScore();
 		if (score !== local) {
 		    local = score;
-		    console.log(local);
+		       const urlParams = new URLSearchParams(window.location.search);
+		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
+			    userId: urlParams.get("userId"),
+			    score: local,
+			    game_name: "tailblazer"
+		    )}).then(console.debug)
 		};
 		setTimeout(onUpdate, 200);
 	    };
