--- a/mobile/alienattack/index.html
+++ b/mobile/alienattack/index.html
@@ -82,11 +82,11 @@
 		if (score !== local) {
 		    local = score;
 		    const urlParams = new URLSearchParams(window.location.search);
-		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
+		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify({
 			    userId: urlParams.get("userId"),
 			    score: local,
 			    game_name: "alienattack"
-		    )}).then(console.debug);
+			})}).then(console.debug);
 		};
 		setTimeout(onUpdate, 200);
 	    };
