--- a/mobile/bottomtight/index.html
+++ b/mobile/bottomtight/index.html
@@ -101,11 +101,11 @@
 		    local = score;
 		    console.log(local);
 	            const urlParams = new URLSearchParams(window.location.search);
-		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
+		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify({
 			    userId: urlParams.get("userId"),
 			    score: local,
 			    game_name: "bottomtight"
-		    )}).then(console.debug)
+		    })}).then(console.debug);
 		};
 		setTimeout(onUpdate, 200);
 	    };
