--- a/mobile/cheeselab/index.html
+++ b/mobile/cheeselab/index.html
@@ -73,9 +73,9 @@
 		    local = score;
 		       const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
-			    userId: urlParams.get("userId"),
+			   { userId: urlParams.get("userId"),
 			    score: local,
-			    game_name: "cheeselab"
+			    game_name: "cheeselab"}
 		    )}).then(console.debug)
 		};
 		setTimeout(onUpdate, 200);
