--- a/mobile/flyingschool/index.html
+++ b/mobile/flyingschool/index.html
@@ -96,10 +96,10 @@
 		    console.log(local);
 	            const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
-			    userId: urlParams.get("userId"),
+{			    userId: urlParams.get("userId"),
 			    score: local,
 			    game_name: "flyingschool"
-		    )}).then(console.debug)
+				    }		    )}).then(console.debug)
 		};
 		setTimeout(onUpdate, 200);
 	    };
