--- a/mobile/jellydoods/index.html
+++ b/mobile/jellydoods/index.html
@@ -102,9 +102,9 @@
 		    local = score;
 		    const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/", {method: "POST", body:JSON.stringify(
-			    userId: urlParams.get("userId"),
+{			    userId: urlParams.get("userId"),
 			    score: local,
-			    game_name: "jellydoods"
+			    game_name: "jellydoods"}
 		    )}).then(console.debug);
 		};
 		setTimeout(onUpdate, 200);
