--- a/mobile/jumppydragon/index.html
+++ b/mobile/jumppydragon/index.html
@@ -86,11 +86,11 @@
 		    local = score;
 		    const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
-			    userId: urlParams.get("userId"),
+{			    userId: urlParams.get("userId"),
 			    score: local,
 			    game_name: "jumpdragon"
-		    )}).then(console.debug);
-		};
+		})}).then(console.debug);
+						};
 		setTimeout(onUpdate, 200);
 	    };
 	    setTimeout(onUpdate, 200);
