--- a/mobile/monstereater/index.html
+++ b/mobile/monstereater/index.html
@@ -93,10 +93,10 @@
 		    local = score;
 		    const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
-			    userId: urlParams.get("userId"),
+{			    userId: urlParams.get("userId"),
 			    score: local,
 			    game_name: "monstereater"
-		    )}).then(console.debug);
+		 } )}).then(console.debug);
 		};
 		setTimeout(onUpdate, 200);
 	    };
