--- a/mobile/pebbleboy/index.html
+++ b/mobile/pebbleboy/index.html
@@ -87,10 +87,10 @@
 		    local = score;
 		    const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/", {method: "POST", body:JSON.stringify(
-			    userId: urlParams.get("userId"),
+			 {   userId: urlParams.get("userId"),
 			    score: local,
 			    game_name: "pebbleboy"
-		    )}).then(console.debug);
+        })}).then(console.debug);
 		};
 		setTimeout(onUpdate, 200);
 	    };
