--- a/mobile/trailblazer/index.html
+++ b/mobile/trailblazer/index.html
@@ -1,84 +1,89 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-        <meta content="utf-8" http-equiv="encoding">
 
-        <!-- This is to enable fullscreen when you save the page as a bookmark to the phone desktop. -->
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="mobile-web-app-capable" content="yes">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
 
-        <script src="js/libs/pixi/pixi.min.js"></script>
-        <script src="js/libs/pixi/pixi-particles.min.js"></script>
-        <script src="js/libs/pixi/pixi-spine.js"></script>
-        <script src="js/libs/signals.min.js"></script>
-        <script src="js/libs/greensock/tweenmax.min.js"></script>
-        <script src="js/libs/howler.min.js"></script>
-        <script src="js/libs/bowser/bowser.min.js"></script>
-        <script src="js/libs/md5.min.js"></script>
-        <!--<script src="js/libs/p2.min.js"></script>-->
-        <script src="js/libs/jquery-2.1.3.min.js"></script>
+    <!-- This is to enable fullscreen when you save the page as a bookmark to the phone desktop. -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
 
-        <script src="p3.min.js"></script>
-        <script src="bundle.dev.js"></script>
+    <script src="js/libs/pixi/pixi.min.js"></script>
+    <script src="js/libs/pixi/pixi-particles.min.js"></script>
+    <script src="js/libs/pixi/pixi-spine.js"></script>
+    <script src="js/libs/signals.min.js"></script>
+    <script src="js/libs/greensock/tweenmax.min.js"></script>
+    <script src="js/libs/howler.min.js"></script>
+    <script src="js/libs/bowser/bowser.min.js"></script>
+    <script src="js/libs/md5.min.js"></script>
+    <!--<script src="js/libs/p2.min.js"></script>-->
+    <script src="js/libs/jquery-2.1.3.min.js"></script>
 
-        <!--<link rel="stylesheet" href="assets/fonts/FredFredburgerAra-Regular.css">
+    <script src="p3.min.js"></script>
+    <script src="bundle.dev.js"></script>
+
+    <!--<link rel="stylesheet" href="assets/fonts/FredFredburgerAra-Regular.css">
         <link rel="stylesheet" href="assets/fonts/FredFredburgerAraHeadBlack-Regular.css">-->
-        <script>
-            const key = "powerpuffgirls_trail_blazer_0.0.1";
-             function getScore () {
-		let local = localStorage.getItem(key);
-		if (local) {
-			return JSON.parse(local)['bestScore'];
-		};
-	        return "0";
-		};
-	    var local = '0';
-     	    function onUpdate() {
-		let score = getScore();
-		if (score !== local) {
-		    local = score;
-		       const urlParams = new URLSearchParams(window.location.search);
-		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
-			    userId: urlParams.get("userId"),
-			    score: local,
-			    game_name: "tailblazer"
-		    )}).then(console.debug)
-		};
-		setTimeout(onUpdate, 200);
-	    };
-	    setTimeout(onUpdate, 200);
-	    
-	        window.onload = () => {
-		local = getScore();
-		};
-        </script>
-        <style>
-            body {
-                margin: 0;
-                padding: 0;
-                background-color: #000000;
-            }
-            #game {
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                background-color: #FFFFFF;
-            }
-        </style>
-    </head>
+    <script>
+        const key = "powerpuffgirls_trail_blazer_0.0.1";
+        function getScore() {
+            let local = localStorage.getItem(key);
+            if (local) {
+                return JSON.parse(local)['bestScore'];
+            };
+            return "0";
+        };
+        var local = '0';
+        function onUpdate() {
+            let score = getScore();
+            if (score !== local) {
+                local = score;
+                const urlParams = new URLSearchParams(window.location.search);
+                fetch("https://switchgames.onrender.com/updateScore", {
+                    method: "POST", body: JSON.stringify(
+                        {
+                            userId: urlParams.get("userId"),
+                            score: local,
+                            game_name: "tailblazer"
+                        })
+                }).then(console.debug)
+            };
+            setTimeout(onUpdate, 200);
+        };
+        setTimeout(onUpdate, 200);
 
-    <body>
-        <div id="og-game-holder"></div>
-        <script>
-            window.og = {};
-            window.og.gameDir = "";
-            window.og.language = "en";
+        window.onload = () => {
+            local = getScore();
+        };
+    </script>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #000000;
+        }
 
-            var main = new Main(1024, 768);
-            main.init();
-        </script>
-    </body>
+        #game {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: #FFFFFF;
+        }
+    </style>
+</head>
+
+<body>
+    <div id="og-game-holder"></div>
+    <script>
+        window.og = {};
+        window.og.gameDir = "";
+        window.og.language = "en";
+
+        var main = new Main(1024, 768);
+        main.init();
+    </script>
+</body>
+
 </html>
-    
