--- a/mobile/pebbleboy/index.html
+++ b/mobile/pebbleboy/index.html
@@ -86,7 +86,7 @@
 		if (score !== local) {
 		    local = score;
 		    const urlParams = new URLSearchParams(window.location.search);
-		    fetch("https://switchgames.onrender.com/", {method: "POST", body:JSON.stringify(
+		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 			 {   userId: urlParams.get("userId"),
 			    score: local,
 			    game_name: "pebbleboy"
