--- a/mobile/alienattack/index.html
+++ b/mobile/alienattack/index.html
@@ -85,7 +85,9 @@
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify({
 			    userId: urlParams.get("userId"),
 			    score: local,
-			    game_name: "alienattack"
+			    game_name: "alienattack",
+				messageId: urlParams.get("messageId"),
+
 			})}).then(console.debug);
 		};
 		setTimeout(onUpdate, 200);
