--- a/mobile/bottomtight/index.html
+++ b/mobile/bottomtight/index.html
@@ -104,7 +104,9 @@
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify({
 			    userId: urlParams.get("userId"),
 			    score: local,
-			    game_name: "bottomtight"
+			    game_name: "bottomtight",
+				messageId: urlParams.get("messageId")
+
 		    })}).then(console.debug);
 		};
 		setTimeout(onUpdate, 200);
