--- a/mobile/candyfusion/index.html
+++ b/mobile/candyfusion/index.html
@@ -97,7 +97,9 @@
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 			    {userId: urlParams.get("userId"),
 			    score: local,
-			    game_name: "candyfusion"
+			    game_name: "candyfusion",
+				messageId: urlParams.get("messageId"),
+
 		   }   )}).then(console.debug);
 		};
 		setTimeout(onUpdate, 200);
