--- a/mobile/cheeselab/index.html
+++ b/mobile/cheeselab/index.html
@@ -75,7 +75,9 @@
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 			   { userId: urlParams.get("userId"),
 			    score: local,
-			    game_name: "cheeselab"}
+			    game_name: "cheeselab",
+				messageId: urlParams.get("messageId")
+			}
 		    )}).then(console.debug)
 		};
 		setTimeout(onUpdate, 200);
