--- a/mobile/jellydoods/index.html
+++ b/mobile/jellydoods/index.html
@@ -104,7 +104,9 @@
 		    fetch("https://switchgames.onrender.com/", {method: "POST", body:JSON.stringify(
 {			    userId: urlParams.get("userId"),
 			    score: local,
-			    game_name: "jellydoods"}
+			    game_name: "jellydoods",
+                messageId: urlParams.get("messageId"),
+}
 		    )}).then(console.debug);
 		};
 		setTimeout(onUpdate, 200);
