--- a/mobile/jumppydragon/index.html
+++ b/mobile/jumppydragon/index.html
@@ -88,7 +88,9 @@
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 {			    userId: urlParams.get("userId"),
 			    score: local,
-			    game_name: "jumpdragon"
+			    game_name: "jumpdragon",
+				messageId: urlParams.get("messageId"),
+
 		})}).then(console.debug);
 						};
 		setTimeout(onUpdate, 200);
