--- a/mobile/monstereater/index.html
+++ b/mobile/monstereater/index.html
@@ -95,7 +95,8 @@
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 {			    userId: urlParams.get("userId"),
 			    score: local,
-			    game_name: "monstereater"
+			    game_name: "monstereater",
+				messageId: urlParams.get("messageId"),
 		 } )}).then(console.debug);
 		};
 		setTimeout(onUpdate, 200);
