--- a/mobile/pebbleboy/index.html
+++ b/mobile/pebbleboy/index.html
@@ -89,7 +89,9 @@
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 			 {   userId: urlParams.get("userId"),
 			    score: local,
-			    game_name: "pebbleboy"
+			    game_name: "pebbleboy",
+                messageId: urlParams.get("messageId"),
+
         })}).then(console.debug);
 		};
 		setTimeout(onUpdate, 200);
