--- a/mobile/piratekid/index.html
+++ b/mobile/piratekid/index.html
@@ -98,7 +98,9 @@
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 			{    userId: urlParams.get("userId"),
 			    score: local,
-			    game_name: "piratekid"
+			    game_name: "piratekid",
+				messageId: urlParams.get("messageId"),
+
 		})}).then(console.debug);
 		};
 		setTimeout(onUpdate, 200);
