--- a/mobile/stickpandaxmas/index.html
+++ b/mobile/stickpandaxmas/index.html
@@ -99,7 +99,9 @@
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 			    {userId: urlParams.get("userId"),
 			    score: local,
-			    game_name: "stickpanda"
+			    game_name: "stickpanda",
+				messageId: urlParams.get("messageId"),
+
 				    }		    )}).then(console.debug)
 		};
 		setTimeout(onUpdate, 200);
