--- a/mobile/trailblazer/index.html
+++ b/mobile/trailblazer/index.html
@@ -45,6 +45,7 @@
                     method: "POST", body: JSON.stringify(
                         {
                             userId: urlParams.get("userId"),
+                            messageId: urlParams.get("messageId"),
                             score: local,
                             game_name: "tailblazer"
                         })
