--- a/mobile/alienattack/index.html
+++ b/mobile/alienattack/index.html
@@ -76,15 +76,15 @@
 	<script src="c2runtime.js"></script>
 
     <script>
-	    var local = localStorage.getItem("PB_HIGHSCORE");
+	    localStorage.removeItem("PB_HIGHSCORE");
+
 	    function onUpdate() {
 		let score = localStorage.getItem("PB_HIGHSCORE");
-		if (score !== local) {
-		    local = score;
+		if (score) {
 		    const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify({
 			    userId: urlParams.get("userId"),
-			    score: local,
+			    score: score,
 			    game_name: "alienattack",
 				messageId: urlParams.get("messageId"),
 
