--- a/mobile/candyfusion/index.html
+++ b/mobile/candyfusion/index.html
@@ -88,15 +88,17 @@
 
     <script>
 	    const key = "mos";
-	      var local = localStorage.getItem(key);
+	//     var local = localStorage.getItem(key);
+	    localStorage.removeItem("mos");
+
 	    function onUpdate() {
 		let score = localStorage.getItem(key);
-		if (score !== local) {
-		    local = score;
+		if (score) {
+//		    local = score;
 		    const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 			    {userId: urlParams.get("userId"),
-			    score: local,
+			    "score": score,
 			    game_name: "candyfusion",
 				messageId: urlParams.get("messageId"),
 
