--- a/mobile/cheeselab/index.html
+++ b/mobile/cheeselab/index.html
@@ -66,15 +66,15 @@
 
     <script>
 	    const key = "RKARMAX_HIGHSCORE";
-	    var local = localStorage.getItem(key);
+	    localStorage.removeItem(key);
 	    function onUpdate() {
 		let score = localStorage.getItem(key);
-		if (score !== local) {
-		    local = score;
+		if (score) {
+		//    local = score;
 		       const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 			   { userId: urlParams.get("userId"),
-			    score: local,
+			    "score": score,
 			    game_name: "cheeselab",
 				messageId: urlParams.get("messageId")
 			}
