--- a/mobile/flyingschool/index.html
+++ b/mobile/flyingschool/index.html
@@ -88,12 +88,12 @@
 
     <script>
 	    let key = "FS_HIGHSCORE";
-   	    var local = localStorage.getItem(key);
+   	    localStorage.removeItem(key);
 	    function onUpdate() {
-		let score = localStorage.getItem(key);
-		if (score !== local) {
-		    local = score;
-		    console.log(local);
+		let local = localStorage.getItem(key);
+		if (local) {
+///		    local = score;
+//		    console.log(local);
 	            const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 {			    userId: urlParams.get("userId"),
