--- a/mobile/jellydoods/index.html
+++ b/mobile/jellydoods/index.html
@@ -95,15 +95,15 @@
 		local?.levels?.map(x => score += x.stars);
 		return score;
 	    }
-            var local = getScore(); 
+//            var local = getScore(); 
 	    function onUpdate() {
 		let score = getScore();
-		if (score !== local) {
-		    local = score;
+		if (score) {
+//		    local = score;
 		    const urlParams = new URLSearchParams(window.location.search);
-		    fetch("https://switchgames.onrender.com/", {method: "POST", body:JSON.stringify(
+		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 {			    userId: urlParams.get("userId"),
-			    score: local,
+			    score: score,
 			    game_name: "jellydoods",
                 messageId: urlParams.get("messageId"),
 }
