--- a/mobile/jumppydragon/index.html
+++ b/mobile/jumppydragon/index.html
@@ -79,15 +79,16 @@
 
     <script>
 	     const key = "djump";
-	      var local = localStorage.getItem(key);
+		 localStorage.removeItem(key);
+//	      var local = localStorage.getItem(key);
 	    function onUpdate() {
-		let score = localStorage.getItem(key);
-		if (score !== local) {
-		    local = score;
+//		let score = localStorage.getItem(key);
+		if (score) {
+//		    local = score;
 		    const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 {			    userId: urlParams.get("userId"),
-			    score: local,
+			    "score": score,
 			    game_name: "jumpdragon",
 				messageId: urlParams.get("messageId"),
 
