--- a/mobile/piratekid/index.html
+++ b/mobile/piratekid/index.html
@@ -88,16 +88,16 @@
 
     <script>
 	    		 const key = "PirateKid";
-		
-	      var local = localStorage.getItem(key)?.highscore;
+				 localStorage.removeItem(key);
+//	      var local = localStorage.getItem(key)?.highscore;
 	    function onUpdate() {
 		let score = localStorage.getItem(key)?.highscore;
-		if (score !== local) {
-		    local = score;
+		if (score) {
+//		    local = score;
 		    const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 			{    userId: urlParams.get("userId"),
-			    score: local,
+			    "score": score,
 			    game_name: "piratekid",
 				messageId: urlParams.get("messageId"),
 
