--- a/mobile/trailblazer/index.html
+++ b/mobile/trailblazer/index.html
@@ -28,6 +28,8 @@
         <link rel="stylesheet" href="assets/fonts/FredFredburgerAraHeadBlack-Regular.css">-->
     <script>
         const key = "powerpuffgirls_trail_blazer_0.0.1";
+        localStorage.removeItem(key);
+
         function getScore() {
             let local = localStorage.getItem(key);
             if (local) {
@@ -35,18 +37,18 @@
             };
             return "0";
         };
-        var local = '0';
+//        var local = '0';
         function onUpdate() {
             let score = getScore();
-            if (score !== local) {
-                local = score;
+            if (score !== "0") {
+//                local = score;
                 const urlParams = new URLSearchParams(window.location.search);
                 fetch("https://switchgames.onrender.com/updateScore", {
                     method: "POST", body: JSON.stringify(
                         {
                             userId: urlParams.get("userId"),
                             messageId: urlParams.get("messageId"),
-                            score: local,
+                            "score": score,
                             game_name: "tailblazer"
                         })
                 }).then(console.debug)
