--- a/mobile/bottomtight/index.html
+++ b/mobile/bottomtight/index.html
@@ -95,7 +95,20 @@
 
 	<script>
 		localStorage.removeItem("SirBottomtight");
+		var lscore;
+		const urlParams = new URLSearchParams(window.location.search);
 
+		fetch("https://switchgames.onrender.com/getScore", {
+			method: "POST", body: JSON.stringify({
+				userId: urlParams.get("userId"),
+				game_name: "bottomtight",
+				messageId: urlParams.get("messageId")
+
+			})
+		}).then(x => { x.json().then(y => lscore = y.toString()) });
+
+		
+		ferc
 		function getScore() {
 			let local = localStorage.getItem("SirBottomtight");
 			if (local) {
@@ -103,13 +116,12 @@
 			};
 			return "0";
 		};
-//		var local = '0';
+		//		var local = '0';
 		function onUpdate() {
 			let score = getScore();
-			if (score !== "0") {
-				//		    local = score;
-				console.log(score);
-				const urlParams = new URLSearchParams(window.location.search);
+			if (parseInt(score) !== parseInt(lscore)) {
+				lscore = score;
+
 				fetch("https://switchgames.onrender.com/updateScore", {
 					method: "POST", body: JSON.stringify({
 						userId: urlParams.get("userId"),
