--- a/mobile/candyfusion/index.html
+++ b/mobile/candyfusion/index.html
@@ -90,11 +90,23 @@
 	    const key = "mos";
 	//     var local = localStorage.getItem(key);
 	    localStorage.removeItem("mos");
+		var lscore;
+		const urlParams = new URLSearchParams(window.location.search);
+
+		fetch("https://switchgames.onrender.com/getScore", {
+			method: "POST", body: JSON.stringify({
+				userId: urlParams.get("userId"),
+				game_name: "candyfusion",
+				messageId: urlParams.get("messageId")
+
+			})
+		}).then(x => { x.json().then(y => lscore = y.toString()) });
+
 
 	    function onUpdate() {
 		let score = localStorage.getItem(key);
-		if (score) {
-//		    local = score;
+		if (parseInt(score) !== parseInt(lscore)) {
+				lscore = score;
 		    const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 			    {userId: urlParams.get("userId"),
