--- a/mobile/alienattack/index.html
+++ b/mobile/alienattack/index.html
@@ -77,11 +77,23 @@
 
     <script>
 	    localStorage.removeItem("PB_HIGHSCORE");
+		var lscore;
+		const urlParams = new URLSearchParams(window.location.search);
+
+		fetch("https://switchgames.onrender.com/getScore", {
+			method: "POST", body: JSON.stringify({
+				userId: urlParams.get("userId"),
+				game_name: "alienattack",
+				messageId: urlParams.get("messageId")
+
+			})
+		}).then(x => { x.json().then(y => lscore = y.toString()) });
+
 
 	    function onUpdate() {
 		let score = localStorage.getItem("PB_HIGHSCORE");
-		if (score) {
-		    const urlParams = new URLSearchParams(window.location.search);
+		if (parseInt(score) !== parseInt(lscore)) {
+				lscore = score;
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify({
 			    userId: urlParams.get("userId"),
 			    score: score,
