--- a/mobile/cheeselab/index.html
+++ b/mobile/cheeselab/index.html
@@ -67,9 +67,23 @@
     <script>
 	    const key = "RKARMAX_HIGHSCORE";
 	    localStorage.removeItem(key);
+		var lscore;
+		const urlParams = new URLSearchParams(window.location.search);
+
+		fetch("https://switchgames.onrender.com/getScore", {
+			method: "POST", body: JSON.stringify({
+				userId: urlParams.get("userId"),
+				game_name: "cheeselab",
+				messageId: urlParams.get("messageId")
+
+			})
+		}).then(x => { x.json().then(y => lscore = y.toString()) });
+
+
 	    function onUpdate() {
 		let score = localStorage.getItem(key);
-		if (score) {
+		if (parseInt(score) !== parseInt(lscore)) {
+				lscore = score;
 		//    local = score;
 		       const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
