--- a/mobile/flyingschool/index.html
+++ b/mobile/flyingschool/index.html
@@ -89,11 +89,23 @@
     <script>
 	    let key = "FS_HIGHSCORE";
    	    localStorage.removeItem(key);
+		   var lscore;
+		const urlParams = new URLSearchParams(window.location.search);
+
+		fetch("https://switchgames.onrender.com/getScore", {
+			method: "POST", body: JSON.stringify({
+				userId: urlParams.get("userId"),
+				game_name: "flyingschool",
+				messageId: urlParams.get("messageId")
+
+			})
+		}).then(x => { x.json().then(y => lscore = y.toString()) });
+
+
 	    function onUpdate() {
 		let local = localStorage.getItem(key);
-		if (local) {
-///		    local = score;
-//		    console.log(local);
+		if (parseInt(score) !== parseInt(lscore)) {
+				lscore = score;
 	            const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 {			    userId: urlParams.get("userId"),
