--- a/mobile/jellydoods/index.html
+++ b/mobile/jellydoods/index.html
@@ -95,11 +95,23 @@
 		local?.levels?.map(x => score += x.stars);
 		return score;
 	    }
-//            var local = getScore(); 
+        var lscore;
+		const urlParams = new URLSearchParams(window.location.search);
+
+		fetch("https://switchgames.onrender.com/getScore", {
+			method: "POST", body: JSON.stringify({
+				userId: urlParams.get("userId"),
+				game_name: "bottomtight",
+				messageId: urlParams.get("messageId")
+
+			})
+		}).then(x => { x.json().then(y => lscore = y.toString()) });
+
+
 	    function onUpdate() {
 		let score = getScore();
-		if (score) {
-//		    local = score;
+        if (parseInt(score) !== parseInt(lscore)) {
+				lscore = score;
 		    const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 {			    userId: urlParams.get("userId"),
