--- a/mobile/jumppydragon/index.html
+++ b/mobile/jumppydragon/index.html
@@ -80,11 +80,23 @@
     <script>
 	     const key = "djump";
 		 localStorage.removeItem(key);
-//	      var local = localStorage.getItem(key);
-	    function onUpdate() {
+		 var lscore;
+		const urlParams = new URLSearchParams(window.location.search);
+
+		fetch("https://switchgames.onrender.com/getScore", {
+			method: "POST", body: JSON.stringify({
+				userId: urlParams.get("userId"),
+				game_name: "jumpdragon",
+				messageId: urlParams.get("messageId")
+
+			})
+		}).then(x => { x.json().then(y => lscore = y.toString()) });
+
+
+		function onUpdate() {
 //		let score = localStorage.getItem(key);
-		if (score) {
-//		    local = score;
+if (parseInt(score) !== parseInt(lscore)) {
+				lscore = score;
 		    const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 {			    userId: urlParams.get("userId"),
