--- a/mobile/monstereater/index.html
+++ b/mobile/monstereater/index.html
@@ -90,19 +90,25 @@
 
 	<script>
 		localStorage.removeItem("mos");
+		var lscore;
+		const urlParams = new URLSearchParams(window.location.search);
 
-		fetch("/getScore", {
+		fetch("https://switchgames.onrender.com/getScore", {
 			method: "POST", body: JSON.stringify({
 				userId: urlParams.get("userId"),
-				game_name: "monstereater"
+				game_name: "monstereater",
+				messageId: urlParams.get("messageId")
+
 			})
-		}).then(x => x.json().then(data => {
+		}).then(x => { x.json().then(y => lscore = y.toString()) });
+
+
 			const key = "mos";
 			var local = data; //localStorage.getItem(key);
 			function onUpdate() {
 				let score = localStorage.removeItem(key);
-				if (score) {
-					//		    local = score;
+				if (parseInt(score) !== parseInt(lscore)) {
+				lscore = score;
 					const urlParams = new URLSearchParams(window.location.search);
 					fetch("https://switchgames.onrender.com/updateScore", {
 						method: "POST", body: JSON.stringify(
@@ -117,7 +123,7 @@
 				setTimeout(onUpdate, 200);
 			};
 			setTimeout(onUpdate, 200);
-		}));
+		
 		// Size the canvas to fill the browser viewport.
 		jQuery(window).resize(function () {
 			cr_sizeCanvas(jQuery(window).width(), jQuery(window).height());
