--- a/mobile/piratekid/index.html
+++ b/mobile/piratekid/index.html
@@ -89,11 +89,23 @@
     <script>
 	    		 const key = "PirateKid";
 				 localStorage.removeItem(key);
-//	      var local = localStorage.getItem(key)?.highscore;
+				 var lscore;
+		const urlParams = new URLSearchParams(window.location.search);
+
+		fetch("https://switchgames.onrender.com/getScore", {
+			method: "POST", body: JSON.stringify({
+				userId: urlParams.get("userId"),
+				game_name: "piratekid",
+				messageId: urlParams.get("messageId")
+
+			})
+		}).then(x => { x.json().then(y => lscore = y.toString()) });
+
+
 	    function onUpdate() {
 		let score = localStorage.getItem(key)?.highscore;
-		if (score) {
-//		    local = score;
+		if (parseInt(score) !== parseInt(lscore)) {
+				lscore = score;
 		    const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
 			{    userId: urlParams.get("userId"),
