--- a/mobile/trailblazer/index.html
+++ b/mobile/trailblazer/index.html
@@ -37,7 +37,19 @@
             };
             return "0";
         };
-//        var local = '0';
+
+        var lscore;
+		const urlParams = new URLSearchParams(window.location.search);
+
+		fetch("https://switchgames.onrender.com/getScore", {
+			method: "POST", body: JSON.stringify({
+				userId: urlParams.get("userId"),
+				game_name: "tailblazer",
+				messageId: urlParams.get("messageId")
+			})
+		}).then(x => { x.json().then(y => lscore = y.toString()) });
+
+
         function onUpdate() {
             let score = getScore();
             if (score !== "0") {
