--- a/mobile/jellydoods/index.html
+++ b/mobile/jellydoods/index.html
@@ -110,7 +110,7 @@
 
 	    function onUpdate() {
 		let score = getScore();
-        if (parseInt(score) !== parseInt(lscore)) {
+        if (parseInt(score) > parseInt(lscore)) {
 				lscore = score;
 		    const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
