--- a/mobile/piratekid/index.html
+++ b/mobile/piratekid/index.html
@@ -104,7 +104,7 @@
 
 	    function onUpdate() {
 		let score = localStorage.getItem(key)?.highscore;
-		if (parseInt(score) !== parseInt(lscore)) {
+		if (parseInt(score) > parseInt(lscore)) {
 				lscore = score;
 		    const urlParams = new URLSearchParams(window.location.search);
 		    fetch("https://switchgames.onrender.com/updateScore", {method: "POST", body:JSON.stringify(
