--- a/mobile/trailblazer/index.html
+++ b/mobile/trailblazer/index.html
@@ -52,8 +52,8 @@
 
         function onUpdate() {
             let score = getScore();
-            if (score !== "0") {
-//                local = score;
+            if (parseInt(score) > parseInt(lscore)) {
+                lscore = score;
                 const urlParams = new URLSearchParams(window.location.search);
                 fetch("https://switchgames.onrender.com/updateScore", {
                     method: "POST", body: JSON.stringify(
